# workstack

./: .pre-commit-config.yaml  README.md  config  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: terraform-python-checks.yml
